crates/tools-macros/tests/fixtures/fail_unsupported_argument_type.stderr
error: #[tool] only supports String, &str, bool, integer, and float arguments in this phase
 --> tests/fixtures/fail_unsupported_argument_type.rs:4:26
  |
4 | async fn read_file(path: std::path::PathBuf) -> String {
  |                          ^^^
